--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1180,33 +1180,33 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   <br>3.4.2 - Gráfico Densidade de coluna (N)  X fluência
 </div>
 
-<!-- Print 6 — gráficos 3.4.1 e 3.4.2 -->
+<!-- Gráficos 3.4 — Área×Fluência e N×Fluência -->
 <div class="print-area" style="text-align:center;">
-  <strong>Print 6</strong><br>
+  <strong>Gráficos 3.4 — Evolução com a fluência</strong><br>
   <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:8px;">
 
     <!-- (A) Área × Fluência -->
     <div style="flex:1 1 420px; max-width:820px;">
-      <div style="font-weight:600; margin-bottom:6px; text-align:left;">3.4.1 — Área integrada × Fluência (sete picos “Pai”)</div>
-      <!-- Se já tiver a imagem, troque o src abaixo pelo caminho correto -->
+      <div style="font-weight:600; margin-bottom:6px; text-align:left;">3.4.1 — Área integrada × Fluência (7 picos “Pai”)</div>
       <img
-        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/area_x_fluencia.png"
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/area_x_fluencia.png?raw=1"
         alt="Área × Fluência (7 picos)"
         style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;"
-        onerror="this.outerHTML='<em>(Inserir figura: Área×Fluência, 7 picos)</em>';">
+        onerror="this.outerHTML='<em>(Figura pendente: salve <code>gif/area_x_fluencia.png</code> no repositório)</em>';">
     </div>
 
     <!-- (B) N × Fluência -->
     <div style="flex:1 1 420px; max-width:820px;">
       <div style="font-weight:600; margin-bottom:6px; text-align:left;">3.4.2 — Densidade de coluna (N) × Fluência</div>
       <img
-        src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/densidadexfluencia.png"
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/densidadexfluencia.png?raw=1"
         alt="Densidade de coluna N × Fluência"
         style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;">
     </div>
 
   </div>
 </div>
+
 
 <!-- Explicação detalhada dos gráficos 3.4.1 e 3.4.2 -->
 <div class="muted" style="text-align:justify; font-size:0.95rem; margin-top:8px;">
