Update image source and error handling in HTML

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1185,15 +1185,18 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   <strong>Gráficos 3.4 — Evolução com a fluência</strong><br>
   <div style="display:flex; gap:12px; justify-content:center; flex-wrap:wrap; margin-top:8px;">
 
-    <!-- (A) Área × Fluência -->
-    <div style="flex:1 1 420px; max-width:820px;">
-      <div style="font-weight:600; margin-bottom:6px; text-align:left;">3.4.1 — Área integrada × Fluência (7 picos “Pai”)</div>
-      <img
-        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/gif/area_x_fluencia.png?raw=1"
-        alt="Área × Fluência (7 picos)"
-        style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;"
-        onerror="this.outerHTML='<em>(Figura pendente: salve <code>gif/area_x_fluencia.png</code> no repositório)</em>';">
-    </div>
+<!-- (A) Área × Fluência -->
+<div style="flex:1 1 420px; max-width:820px;">
+  <div style="font-weight:600; margin-bottom:6px; text-align:left;">
+    3.4.1 — Área integrada × Fluência (7 picos “Pai”)
+  </div>
+  <img
+    src="https://raw.githubusercontent.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/main/gif/areaxfluencia.png"
+    alt="Área × Fluência (7 picos)"
+    style="width:100%; height:auto; border:1px solid #ddd; padding:2px; background:#fff;"
+    onerror="this.outerHTML='<em>(Figura pendente: verifique o caminho exato <code>gif/areaxfluencia.png</code> e a extensão)</em>';">
+</div>
+
 
     <!-- (B) N × Fluência -->
     <div style="flex:1 1 420px; max-width:820px;">
