--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1313,9 +1313,45 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   <br>
   Bandas Filho para os picos em: &nbsp; 781, 1040, 1702, 1718, 2139
 </div>
-<div class="print-area" style="text-align:justify;"><strong>Print 7</strong><br><em>(Inserir captura: evolução das bandas “Filho”)</em></div>
 
-<div class="enunciado" style="text-align:justify;">
+  
+<!-- 4.3) Gráficos Área × Fluência e N × Fluência -->
+<div class="print-area" style="text-align:justify; margin-top:8px;">
+  <strong>Print 8 — Gráficos (item 4.3)</strong>
+  <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:flex-start; margin-top:6px;">
+    <!-- Área × Fluência -->
+    <figure style="flex:1 1 360px; margin:0;">
+      <img
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1.png"
+        alt="Gráfico: Área (abs·cm⁻¹) versus Fluência para c1, c2 e c3"
+        style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
+      >
+      <figcaption style="font-size:0.92rem; margin-top:4px;">
+        Área (abs·cm⁻¹) × Fluência (ions·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+      </figcaption>
+    </figure>
+
+    <!-- N × Fluência -->
+    <figure style="flex:1 1 360px; margin:0;">
+      <img
+        src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1-.png"
+        alt="Gráfico: Densidade de coluna N (moléculas·cm⁻²) versus Fluência para c1, c2 e c3"
+        style="max-width:100%; height:auto; display:block; border:1px solid #ddd; border-radius:4px;"
+      >
+      <figcaption style="font-size:0.92rem; margin-top:4px;">
+        Densidade de coluna <em>N</em> (moléculas·cm⁻²) × Fluência (ions·cm⁻²) para <em>c1</em>, <em>c2</em>, <em>c3</em>.
+      </figcaption>
+    </figure>
+  </div>
+  <p class="muted" style="margin-top:6px; text-align:justify;">
+    Os dois gráficos atendem ao item <strong>4.3</strong>. O item <strong>4.1</strong> (“evolução espectral”) permanece como
+    captura de tela do OMNIC mostrando os picos “Filho” em diferentes fluências (preencha o <strong>Print 7</strong> quando tiver a imagem).
+  </p>
+</div>
+
+
+  
+  <div class="enunciado" style="text-align:justify;">
   4.2 - Determinar as áreas das bandas correspondentes a estes picos.
 </div>
 
