Add sections for analysis and graph creation

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1315,6 +1315,21 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
 
   
+<div class="print-area" style="text-align:justify;"><strong>inserir figura de 4.1</strong><br><em>(Inserir omnic)</em>
+
+
+  
+  <div class="enunciado" style="text-align:justify;">
+  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
+</div>
+
+<div class="enunciado" style="text-align:justify;">
+  4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
+  <br>4.3.1 - Gráfico Área X  fluência
+  <br>4.3.2 - Gráfico Densidade de coluna (N)  X fluência
+</div>
+
+
 <!-- 4.3) Gráficos Área × Fluência e N × Fluência -->
 <div class="print-area" style="text-align:justify; margin-top:8px;">
   <strong>Print 8 — Gráficos (item 4.3)</strong>
@@ -1351,16 +1366,8 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
   
-  <div class="enunciado" style="text-align:justify;">
-  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
-</div>
+  
 
-<div class="enunciado" style="text-align:justify;">
-  4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
-  <br>4.3.1 - Gráfico Área X  fluência
-  <br>4.3.2 - Gráfico Densidade de coluna (N)  X fluência
-</div>
-<div class="print-area" style="text-align:justify;"><strong>Print 8</strong><br><em>(Inserir gráficos: Área×Fluência e N×Fluência — “Filho”)</em>
 
   
 
