Update figure references and captions in HTML

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1315,7 +1315,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
 
   
-<div class="print-area" style="text-align:justify;"><strong>inserir figura de 4.1</strong><br><em>(Inserir omnic)</em>
+<class="print-area" style="text-align:justify;"><strong>inserir figura de 4.1</strong><br><em>(Inserir omnic)</em>
 
 
   
@@ -1332,9 +1332,9 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 <!-- 4.3) Gráficos Área × Fluência e N × Fluência -->
 <div class="print-area" style="text-align:justify; margin-top:8px;">
-  <strong>Print 8 — Gráficos (item 4.3)</strong>
+  <strong>Gráficos de 4.3</strong>
   <div style="display:flex; gap:12px; flex-wrap:wrap; align-items:flex-start; margin-top:6px;">
-    <!-- Área × Fluência -->
+    <!-- 4.3.1) Área × Fluência -->
     <figure style="flex:1 1 360px; margin:0;">
       <img
         src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1.png"
@@ -1346,7 +1346,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
       </figcaption>
     </figure>
 
-    <!-- N × Fluência -->
+    <!-- 4.3.2) N × Fluência -->
     <figure style="flex:1 1 360px; margin:0;">
       <img
         src="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/raw/main/gif/4.1-.png"
