Update summary texts for clarity and formatting

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -565,7 +565,7 @@
 
   <!-- Detalhe: como as áreas foram somadas -->
   <details style="margin-top:10px;">
-    <summary style="cursor:pointer;">Ver como somei as áreas <strong style="color:#006400;">na cor verde</strong> na tabela (c1, c2, c3)</summary>
+    <summary style="cursor:pointer;">(CLIQUE NA SETA PARA EXPANDIR) Ver como somei as áreas <strong style="color:#006400;">na cor verde</strong> na tabela (c1, c2, c3)</summary>
     <div style="font-family:ui-monospace, SFMono-Regular, Menlo, Consolas, 'Liberation Mono', monospace; font-size:0.92rem; white-space:pre-wrap; background:#fafafa; border:1px solid #eee; padding:8px; margin-top:6px;">
 <strong>c1 (1310–1280 cm⁻¹)</strong>
 Áreas: 3,6083 + 3,1577 = <strong>6,7660</strong>
@@ -581,7 +581,7 @@
 
 <!-- Como cheguei aos valores em vermelho (A-values, N e x) -->
 <details style="margin-top:10px;">
-  <summary style="cursor:pointer;">Ver como obtive os valores <span style="color:#c00;font-weight:700;">na cor vermelha</span> (A-values, N e x)</summary>
+  <summary style="cursor:pointer;">(CLIQUE NA SETA PARA EXPANDIR) Ver como obtive os valores <span style="color:#c00;font-weight:700;">na cor vermelha</span> (A-values, N e x)</summary>
 
   <div style="background:#fafafa;border:1px solid #eee;padding:10px;line-height:1.6;font-size:0.95rem;">
     <ol style="margin:0 0 8px 18px;">
@@ -1306,8 +1306,10 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 
 
 <!-- ===================== SEÇÃO 4 (texto original, apenas formatado/justificado) ===================== -->
-<h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
-
+<div class="dicas">
+  <h3 style="text-align:justify;">4) Análise de bandas Filho para a amostra irradiada com diversos valores de fluência</h3>
+</div>
+  
 <div class="enunciado" style="text-align:justify;">
   4.1- Identificar através do programa OMINIC a evolução das bandas com os picos dados abaixo, desde a amostra não irradiada até a irradiação com o maior valor de fluência. Quais as substâncias correspondestes?
   <br>
