Revise Bandas Filho attributions and areas table
Updated Bandas Filho section with new substance attributions and integrated areas for FTIR analysis.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1316,35 +1316,14 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   Bandas Filho para os picos em: &nbsp; 781, 1040, 1702, 1718, 2139
 </div>
 
-  
-<!-- ===== EX4 — Bandas Filho (atribuições + tabela de áreas) ===== -->
-<style>
-.dicas{background:#fff3cd;border-left:6px solid #ffc107;padding:10px;margin-top:20px;border-radius:8px}
-.enunciado{background:#eaf5ff;border-left:6px solid #3b82f6;padding:10px;margin:12px 0;border-radius:8px}
-.print-area{border:2px dashed #999;background:#fffdf5;padding:12px;border-radius:8px;margin:12px 0}
-.tabela{width:100%;border-collapse:collapse;font-size:.95rem}
-.tabela th,.tabela td{border:1px solid #ddd;padding:6px 8px}
-.tabela th{background:#f7f7f7;text-align:center}
-.small{font-size:.9rem;color:#444}
-.badge{display:inline-block;padding:2px 6px;border:1px solid #bbb;border-radius:6px;background:#fafafa;font-size:.85rem}
-</style>
-
-<div class="dicas">
-  <h3 style="text-align:justify;">EX4) Bandas Filho — Identificação dos picos e evolução com a fluência</h3>
-</div>
-
-<div class="enunciado" style="text-align:justify;">
-  Identificar, via OMNIC, a evolução das bandas nos picos-alvo e sugerir as substâncias correspondentes. Picos (cm⁻¹): <strong>781, 1040, 1702, 1718, 2139</strong>.
-</div>
 
 <!-- Tabela 4.1 — Atribuições -->
 <table class="tabela" aria-label="Atribuições de bandas">
-  <caption><strong>Tabela 4.1 — Atribuições propostas para as Bandas Filho</strong></caption>
+  <caption><strong>Tabela 4.1 — Atribuições propostas (Bandas Filho)</strong></caption>
   <thead>
     <tr>
       <th style="width:80px">Pico<br>(cm⁻¹)</th>
-      <th style="width:220px">Substância Correspondente</th>
-      <th style="width:180px">Modo Vibracional</th>
+      <th style="width:260px">Substância Correspondente (Modo)</th>
       <th>Referência (AUTOR, ano) — link</th>
       <th style="width:120px">Status</th>
     </tr>
@@ -1353,79 +1332,68 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     <tr>
       <td style="text-align:center">781</td>
       <td><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
-      <td>—</td>
-      <td>(ROTEIRO, 2025/2) <a href="InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
+      <td>(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
       <td style="text-align:center"><span class="badge">pendente</span></td>
     </tr>
     <tr>
       <td style="text-align:center">1040</td>
-      <td>Ozônio (O<sub>3</sub>)</td>
-      <td>&nu;<sub>3</sub> (assimétrico)</td>
+      <td>O<sub>3</sub> — &nu;<sub>3</sub> (assimétrico)</td>
       <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">confirmado</span></td>
     </tr>
     <tr>
       <td style="text-align:center">1702</td>
-      <td>Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>)</td>
-      <td>&nu;<sub>9</sub></td>
+      <td>N<sub>2</sub>O<sub>5</sub> — &nu;<sub>9</sub></td>
       <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">proposto</span></td>
     </tr>
     <tr>
       <td style="text-align:center">1718</td>
-      <td>Óxido de nitrogênio (N<sub>2</sub>O<sub>4</sub> / N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
-      <td>estiramento C=O/combinação em matriz</td>
+      <td>NO<sub>x</sub> (ex.: N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>) — sítios/conformeros</td>
       <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">a confirmar</span></td>
     </tr>
     <tr>
       <td style="text-align:center">2139</td>
-      <td>Monóxido de carbono (CO)</td>
-      <td>estiramento C≡O</td>
+      <td>CO — estiramento C≡O</td>
       <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">confirmado</span></td>
     </tr>
   </tbody>
 </table>
 
-<p class="small"><strong>Notas:</strong> 1040&nbsp;cm⁻¹ coincide com O<sub>3</sub> (&nu;<sub>3</sub>); 1702/1718&nbsp;cm⁻¹ sugerem espécies derivadas de NO<sub>2</sub> (N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>) em diferentes sítios de matriz; 2139&nbsp;cm⁻¹ é típico de CO em gelo. O pico 781&nbsp;cm⁻¹ é listado no roteiro como “banda-filho”; seguirá investigação específica na literatura para atribuição final.</p>
+<!-- Tabela 4.2 — Áreas (preencher demais fluências quando medir) -->
 
-<!-- Tabela 4.2 — Áreas integradas (preencher por fluência) -->
-<div class="print-area">
-  <strong>Figura 4.1 —</strong> Espectros sobrepostos por fluência (inserir imagem exportada do OMNIC).<br>
-  <em>Metodologia: baseline linear; janelas de integração por pico definidas no método .QNT (Integrated Area).</em>
+<div class="enunciado" style="text-align:justify;">
+  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
 </div>
 
 <table class="tabela" aria-label="Áreas integradas por fluência">
-  <caption><strong>Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e fluência</strong></caption>
+  <caption><strong>Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e por fluência</strong></caption>
   <thead>
     <tr>
       <th>Pico (cm⁻¹)</th>
       <th>F0 (não irradiada)</th>
-      <th>F1</th>
-      <th>F2</th>
-      <th>F3</th>
-      <th>F4</th>
+      <th>1,0×10¹⁰</th>
+      <th>2,5×10¹⁰</th>
+      <th>5,0×10¹⁰</th>
       <th>Obs. (tendência)</th>
     </tr>
   </thead>
   <tbody>
-    <tr><td>781</td><td>—</td><td>—</td><td>—</td><td>—</td><td>—</td><td><!-- ex.: cresce com a fluência --></td></tr>
-    <tr><td>1040</td><td>—</td><td>—</td><td>—</td><td>—</td><td>—</td><td></td></tr>
-    <tr><td>1702</td><td>—</td><td>—</td><td>—</td><td>—</td><td>—</td><td></td></tr>
-    <tr><td>1718</td><td>—</td><td>—</td><td>—</td><td>—</td><td>—</td><td></td></tr>
-    <tr><td>2139</td><td>—</td><td>—</td><td>—</td><td>—</td><td>—</td><td></td></tr>
+    <tr><td>781</td><td>—</td><td>—</td><td>0,0031<span title="medido em 10 K (arquivo distinto)">†</span></td><td>—</td><td><!-- ex.: cresce com a fluência --></td></tr>
+    <tr><td>1040</td><td>—</td><td>—</td><td>0,0017</td><td>—</td><td></td></tr>
+    <tr><td>1702</td><td>—</td><td>—</td><td>0,0011</td><td>—</td><td></td></tr>
+    <tr><td>1718</td><td>—</td><td>—</td><td>0,0008</td><td>—</td><td></td></tr>
+    <tr><td>2139</td><td>—</td><td>—</td><td>0,0028</td><td>—</td><td></td></tr>
   </tbody>
 </table>
 
-<p class="small"><strong>Método (.QNT):</strong> Integrated Area; baseline linear (endpoints); janelas iniciais — 781: 780,0–782,0; 1040: 1035–1045; 1702: 1696–1708; 1718: 1713–1723; 2139: 2132–2146. Ajustar conforme FWHM observada.</p>
-
+<p class="small">† Valor de 781&nbsp;cm⁻¹ obtido do arquivo “N2O 10K … 15:56:12 2015”; recomenda-se repetir a medição no conjunto 11 K/mesmas fluências para consistência.</p>
 
 
   
-  <div class="enunciado" style="text-align:justify;">
-  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
-</div>
+
 
 <div class="enunciado" style="text-align:justify;">
   4.3 - Fazer os gráficos com estes valores no programa ORIGIN:
