Update band assignments and references in HTML table

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1322,8 +1322,8 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   <caption><strong>Tabela 4.1 — Atribuições propostas (Bandas Filho)</strong></caption>
   <thead>
     <tr>
-      <th style="width:80px">Pico<br>(cm⁻¹)</th>
-      <th style="width:260px">Substância Correspondente (Modo)</th>
+      <th style="width:90px">Pico (cm⁻¹)</th>
+      <th style="width:280px">Substância Correspondente (Modo vibracional)</th>
       <th>Referência (AUTOR, ano) — link</th>
       <th style="width:120px">Status</th>
     </tr>
@@ -1337,37 +1337,32 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </tr>
     <tr>
       <td style="text-align:center">1040</td>
-      <td>O<sub>3</sub> — &nu;<sub>3</sub> (assimétrico)</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
+      <td>Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
+      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">confirmado</span></td>
     </tr>
     <tr>
       <td style="text-align:center">1702</td>
-      <td>N<sub>2</sub>O<sub>5</sub> — &nu;<sub>9</sub></td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
+      <td>Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
+      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">proposto</span></td>
     </tr>
     <tr>
       <td style="text-align:center">1718</td>
-      <td>NO<sub>x</sub> (ex.: N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>) — sítios/conformeros</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
+      <td>Provável NO<sub>x</sub> (ex.: N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
+      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">a confirmar</span></td>
     </tr>
     <tr>
       <td style="text-align:center">2139</td>
-      <td>CO — estiramento C≡O</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
+      <td>Monóxido de carbono (CO), estiramento C≡O</td>
+      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
       <td style="text-align:center"><span class="badge">confirmado</span></td>
     </tr>
   </tbody>
 </table>
 
-<!-- Tabela 4.2 — Áreas (preencher demais fluências quando medir) -->
-
-<div class="enunciado" style="text-align:justify;">
-  4.2 - Determinar as áreas das bandas correspondentes a estes picos.
-</div>
-
+<!-- Tabela 4.2 — Áreas (com borda; preencher outras fluências quando disponíveis) -->
 <table class="tabela" aria-label="Áreas integradas por fluência">
   <caption><strong>Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e por fluência</strong></caption>
   <thead>
@@ -1381,7 +1376,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
     </tr>
   </thead>
   <tbody>
-    <tr><td>781</td><td>—</td><td>—</td><td>0,0031<span title="medido em 10 K (arquivo distinto)">†</span></td><td>—</td><td><!-- ex.: cresce com a fluência --></td></tr>
+    <tr><td>781</td><td>—</td><td>—</td><td>0,0031<span title="medido em 10 K (arquivo distinto)">†</span></td><td>—</td><td></td></tr>
     <tr><td>1040</td><td>—</td><td>—</td><td>0,0017</td><td>—</td><td></td></tr>
     <tr><td>1702</td><td>—</td><td>—</td><td>0,0011</td><td>—</td><td></td></tr>
     <tr><td>1718</td><td>—</td><td>—</td><td>0,0008</td><td>—</td><td></td></tr>
@@ -1389,7 +1384,7 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
   </tbody>
 </table>
 
-<p class="small">† Valor de 781&nbsp;cm⁻¹ obtido do arquivo “N2O 10K … 15:56:12 2015”; recomenda-se repetir a medição no conjunto 11 K/mesmas fluências para consistência.</p>
+<p class="small">Dados de área integrados a partir do OMNIC/Peak Resolve, janelas curtas centradas nos picos; baseline linear. † Valor de 781&nbsp;cm⁻¹ veio de arquivo 10&nbsp;K diferente do conjunto 11&nbsp;K/2,5×10¹⁰ — recomenda-se repetir no mesmo conjunto para consistência.</p>
 
 
   
