Refactor tables 4.1 and 4.2 for better clarity
Updated tables 4.1 and 4.2 in the analysis document to improve formatting and remove the status column.

--- a/3rd_exercise_FTIR_N2O_irradiation_analysis.html
+++ b/3rd_exercise_FTIR_N2O_irradiation_analysis.html
@@ -1317,75 +1317,106 @@ x = N/n = 2,85×10¹⁷ / 1,60×10²² = 1,78×10⁻⁵ cm = <span style="color:
 </div>
 
 
-<!-- Tabela 4.1 — Atribuições -->
-<table class="tabela" aria-label="Atribuições de bandas">
-  <caption><strong>Tabela 4.1 — Atribuições propostas (Bandas Filho)</strong></caption>
-  <thead>
-    <tr>
-      <th style="width:90px">Pico (cm⁻¹)</th>
-      <th style="width:280px">Substância Correspondente (Modo vibracional)</th>
-      <th>Referência (AUTOR, ano) — link</th>
-      <th style="width:120px">Status</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="text-align:center">781</td>
-      <td><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
-      <td>(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
-      <td style="text-align:center"><span class="badge">pendente</span></td>
-    </tr>
-    <tr>
-      <td style="text-align:center">1040</td>
-      <td>Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
-      <td style="text-align:center"><span class="badge">confirmado</span></td>
-    </tr>
-    <tr>
-      <td style="text-align:center">1702</td>
-      <td>Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
-      <td style="text-align:center"><span class="badge">proposto</span></td>
-    </tr>
-    <tr>
-      <td style="text-align:center">1718</td>
-      <td>Provável NO<sub>x</sub> (ex.: N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
-      <td style="text-align:center"><span class="badge">a confirmar</span></td>
-    </tr>
-    <tr>
-      <td style="text-align:center">2139</td>
-      <td>Monóxido de carbono (CO), estiramento C≡O</td>
-      <td>JAMIESON <em>et&nbsp;al.</em>, 2005 <a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">[Jamieson_N2O_2005_APJ.pdf]</a></td>
-      <td style="text-align:center"><span class="badge">confirmado</span></td>
-    </tr>
-  </tbody>
-</table>
+<!-- ================ -->
+<div style="border:2px dashed #999; background:#fffdf5; padding:12px; border-radius:8px; margin:12px 0;">
 
-<!-- Tabela 4.2 — Áreas (com borda; preencher outras fluências quando disponíveis) -->
-<table class="tabela" aria-label="Áreas integradas por fluência">
-  <caption><strong>Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e por fluência</strong></caption>
-  <thead>
-    <tr>
-      <th>Pico (cm⁻¹)</th>
-      <th>F0 (não irradiada)</th>
-      <th>1,0×10¹⁰</th>
-      <th>2,5×10¹⁰</th>
-      <th>5,0×10¹⁰</th>
-      <th>Obs. (tendência)</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr><td>781</td><td>—</td><td>—</td><td>0,0031<span title="medido em 10 K (arquivo distinto)">†</span></td><td>—</td><td></td></tr>
-    <tr><td>1040</td><td>—</td><td>—</td><td>0,0017</td><td>—</td><td></td></tr>
-    <tr><td>1702</td><td>—</td><td>—</td><td>0,0011</td><td>—</td><td></td></tr>
-    <tr><td>1718</td><td>—</td><td>—</td><td>0,0008</td><td>—</td><td></td></tr>
-    <tr><td>2139</td><td>—</td><td>—</td><td>0,0028</td><td>—</td><td></td></tr>
-  </tbody>
-</table>
+  <!-- Tabela 4.1 — Atribuições (sem coluna Status) -->
+  <table style="width:100%; border-collapse:collapse; font-size:.95rem;">
+    <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.1 — Atribuições propostas (Bandas Filho)</caption>
+    <thead>
+      <tr>
+        <th style="border:1px solid #333; padding:6px 8px; text-align:center; width:90px;">Pico (cm⁻¹)</th>
+        <th style="border:1px solid #333; padding:6px 8px; width:320px;">Substância Correspondente (Modo vibracional)</th>
+        <th style="border:1px solid #333; padding:6px 8px;">Referência (AUTOR, ano) — link</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">781</td>
+        <td style="border:1px solid #333; padding:6px 8px;"><em>Produto de irradiação</em> (banda-filho, <strong>a determinar</strong>)</td>
+        <td style="border:1px solid #333; padding:6px 8px;">(ROTEIRO, 2025/2) <a href="EN-InstrumProcFisBioRoteiroTarefa2.pdf">[InstrumProcFisBioRoteiroTarefa2.pdf]</a></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1040</td>
+        <td style="border:1px solid #333; padding:6px 8px;">Ozônio (O<sub>3</sub>), &nu;<sub>3</sub> (assimétrico)</td>
+        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1702</td>
+        <td style="border:1px solid #333; padding:6px 8px;">Pentóxido de dinitrogênio (N<sub>2</sub>O<sub>5</sub>), &nu;<sub>9</sub></td>
+        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">1718</td>
+        <td style="border:1px solid #333; padding:6px 8px;">Provável NO<sub>x</sub> (N<sub>2</sub>O<sub>4</sub>/N<sub>2</sub>O<sub>5</sub>), sítios/conformeros</td>
+        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px; text-align:center;">2139</td>
+        <td style="border:1px solid #333; padding:6px 8px;">Monóxido de carbono (CO), estiramento C≡O</td>
+        <td style="border:1px solid #333; padding:6px 8px;"><a href="https://github.com/thallescotta/instrumentacao-aplicada-processos-fisicos-biologicos-PPGIO-2025-2/blob/main/01102025/Jamieson_N2O_2005_APJ.pdf">JAMIESON et&nbsp;al., 2005 [PDF]</a></td>
+      </tr>
+    </tbody>
+  </table>
 
-<p class="small">Dados de área integrados a partir do OMNIC/Peak Resolve, janelas curtas centradas nos picos; baseline linear. † Valor de 781&nbsp;cm⁻¹ veio de arquivo 10&nbsp;K diferente do conjunto 11&nbsp;K/2,5×10¹⁰ — recomenda-se repetir no mesmo conjunto para consistência.</p>
+  <!-- Tabela 4.2 — Áreas integradas (bordas visíveis) -->
+  <table style="width:100%; border-collapse:collapse; font-size:.95rem; margin-top:12px;">
+    <caption style="text-align:left; font-weight:700; margin:6px 0;">Tabela 4.2 — Áreas integradas (u.a.&middot;cm⁻¹) por pico e por fluência</caption>
+    <thead>
+      <tr>
+        <th style="border:1px solid #333; padding:6px 8px;">Pico (cm⁻¹)</th>
+        <th style="border:1px solid #333; padding:6px 8px;">F0 (não irradiada)</th>
+        <th style="border:1px solid #333; padding:6px 8px;">1,0×10¹⁰</th>
+        <th style="border:1px solid #333; padding:6px 8px;">2,5×10¹⁰</th>
+        <th style="border:1px solid #333; padding:6px 8px;">5,0×10¹⁰</th>
+        <th style="border:1px solid #333; padding:6px 8px;">Obs. (tendência)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px;">781</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">0,0031</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;"></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px;">1040</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">0,0017</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;"></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px;">1702</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">0,0011</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;"></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px;">1718</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">0,0008</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;"></td>
+      </tr>
+      <tr>
+        <td style="border:1px solid #333; padding:6px 8px;">2139</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;">0,0028</td>
+        <td style="border:1px solid #333; padding:6px 8px;">—</td>
+        <td style="border:1px solid #333; padding:6px 8px;"></td>
+      </tr>
+    </tbody>
+  </table>
 
+</div>
 
   
 
